mudei o tema do site

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Na'vi</title>
+    <title>Biologia Marinha</title>
 </head>
 <body>
-    <h1>Curiosidades do povo Na'vi</h1>
-    <p>Quem são?</p>
+    <h1>O Verdadeiro Ecosistema Marinho</h1>
+    <p>Voce conhece o mar</p>
 </body>
 </html>
